# libreria-parcial-Johan

./: .gitignore  README.md  TEORIA.md  pyproject.toml
.github/workflows/: ci.yml
src/libreria_parcial/: producto.py
test/: conftest.py  test_producto.py
test/features/: producto.feature
test/steps/: test_producto_steps.py
