[project]
name = "pruebas-parcial-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pytest>=8.0.0",
	"pytest-cov>=5.0.0",
	"pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = [
	"descuento: escenarios de descuento",
	"positivo: escenarios positivos",
	"limite: escenarios de borde",
	"error: escenarios de error",
	"precio: escenarios de precio final",
]
